# llm-finetune

./: .gitignore  README.md  pyproject.toml  run_chat.py
data/preprocessed/: glaive_function_sampled.json
data/test/final/: deepseek_answers.json  function_calling_test.json  result_df.csv  sample_deepseek_answers.json
data/test/raw/: plains_flights_questions.json  random_questions.json  test.csv  test_with_questions_fixed.csv  test_with_questions_fixed.ods  test_with_questions_fixed_part.csv
llm_finetune/src/: inference.py  parse_json_output.py
llm_finetune/src/data/: generate_test_data.py  preprocess_data.py  process_test_data.py  sample_data.py
llm_finetune/src/test_models/: calculate_metrics.py  get_model_answers.py
notebooks/: data.ipynb  deepseek_finetuning.ipynb  generate_questions.ipynb  results.ipynb
report/: REPORT.md
